--- a/brain-frontend/brain-front/dockerfile
+++ b/brain-frontend/brain-front/dockerfile
@@ -1,17 +1,23 @@
+FROM node:20-alpine AS builder
+
+WORKDIR /app
+
+COPY package*.json ./
+COPY tsconfig*.json ./
+COPY tailwind*.json ./
+RUN npm install
+
+COPY . .
+RUN npm run build
+
 FROM node:20-alpine
 
 WORKDIR /app
 
-COPY package*.json .
+RUN npm install -g serve
 
-COPY tsconfig*.json .
-
-COPY tailwind*.json .
-
-RUN npm install
-
-COPY . .
+COPY --from=builder /app/dist ./dist
 
 EXPOSE 5173
 
-CMD [ "npm", "run" , "dev" ]
+CMD ["serve", "-s", "dist", "-l", "5173"]
