--- a/brain-frontend/brain-front/dockerfile
+++ b/brain-frontend/brain-front/dockerfile
@@ -1,23 +1,15 @@
-FROM node:20-alpine AS builder
-
-WORKDIR /app
-
-COPY package*.json ./
-COPY tsconfig*.json ./
-COPY tailwind*.json ./
-RUN npm install
-
-COPY . .
-RUN npm run build
-
 FROM node:20-alpine
 
 WORKDIR /app
 
-RUN npm install -g serve
+COPY package*.json ./
 
-COPY --from=builder /app/dist ./dist
+RUN npm install
+
+COPY . .
+
+RUN npm run build
 
 EXPOSE 5173
 
-CMD ["serve", "-s", "dist", "-l", "5173"]
+CMD ["npm", "start"]
