--- a/brain-frontend/brain-front/package.json
+++ b/brain-frontend/brain-front/package.json
@@ -8,7 +8,7 @@
     "dev": "vite --host 0.0.0.0",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview --host 0.0.0.0"
   },
   "dependencies": {
     "axios": "^1.7.9",
