--- a/brain-app/dockerfile
+++ b/brain-app/dockerfile
@@ -18,4 +18,6 @@ COPY --from=builder build/package*.json .
 COPY --from=builder build/node_modules node_modules
 COPY --from=builder build/dist dist/
 
+ENV NODE_ENV=production
+
 CMD [ "npm", "start"]
