--- a/brain-app/package.json
+++ b/brain-app/package.json
@@ -24,7 +24,7 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/node": "^22.14.1",
     "typescript": "^5.7.3"
-
   }
 }
