--- a/ops/backend/virtualService.yaml
+++ b/ops/backend/virtualService.yaml
@@ -11,9 +11,9 @@ spec:
   http:
     - match:
         - uri:
-            prefix: /
+            prefix: /api/v1
       route:
         - destination:
-            host: frontend.brain-app.svc.cluster.local
+            host: backend
             port:
               number: 80
