--- a/ops/frontend/deployment.yaml
+++ b/ops/frontend/deployment.yaml
@@ -1,23 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend
+  name: backend
   namespace: brain-app
   labels:
-    app: frontend
+    app: backend
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: frontend
+      app: backend
   template:
     metadata:
       labels:
-        app: frontend
+        app: backend
     spec:
       containers:
-        - name: frontend
-          image: kush233/brain-frontend:latest
+        - name: backend
+          image: kush233/brain-backend:latest
           imagePullPolicy: Always
           ports:
-            - containerPort: 4173
+            - containerPort: 3000
+          env:
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: backend-secrets
+                  key: DATABASE_URL
